package model;

public enum OrdemModo {
    MARKET, LIMIT
}
