package model;

public enum OrdemStatus {
    ATIVA, EXECUTADA, EXPIRADA
}
