package model;

public enum OrdemTipo {
    COMPRA, VENDA
}
