package model;

public enum Perfil {
    ADMIN, USER
}
